<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.udacity.myapplication.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="@dimen/text_size_large"
        android:padding="@dimen/title_padding"
        android:background="@color/colorAccent"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/section_padding">

    <LinearLayout
        android:layout_width="@dimen/none"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_largest_animal"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/animal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_largest_animal" />

    </LinearLayout>

    <TextView
        android:id="@+id/tic_animal"
        android:layout_width="@dimen/none"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end"
        android:layout_weight="1"
        android:text="@string/tic"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/text_size_large"
        android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/section_padding">

        <LinearLayout
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_tiger_species"
                android:textSize="@dimen/text_size" />

            <RadioGroup
                android:id="@+id/radiogroup_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_species_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_species_siberian"
                    android:visibility="gone"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_species_bengal"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_species_siberian"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_species_china"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/tic_species"
            android:layout_width="@dimen/none"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="@string/tic"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_large"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/section_padding">

        <LinearLayout
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_giraffes"
                android:textSize="@dimen/text_size" />

            <RadioGroup
                android:id="@+id/radiogroup_giraffes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_giraffes_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_giraffes_africa"
                    android:visibility="gone"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_giraffes_africa"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_giraffes_asia"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_giraffes_australia"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/tic_giraffes"
            android:layout_width="@dimen/none"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="@string/tic"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_large"
            android:visibility="invisible" />
    </LinearLayout>

    <!-- Multiple answers -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/section_padding">

        <LinearLayout
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_mammals"
                android:textSize="@dimen/text_size" />

            <CheckBox
                android:id="@+id/checbox_yak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_mammals_yak"/>

            <CheckBox
                android:id="@+id/checkbox_parrot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_mammals_parrot"/>

            <CheckBox
                android:id="@+id/checkbox_okapi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_mammals_okapi"/>

            <CheckBox
                android:id="@+id/checkbox_sardines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_mammals_sardines"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tic_mammals"
            android:layout_width="@dimen/none"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="@string/tic"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_large"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:onClick="checkAnswers"/>
</LinearLayout>
</ScrollView>